// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component CustomInput Can render CustomInput default with type component text 1`] = `
<div
  className="css-cssveg"
>
  <input
    className="css-1why0iz"
    defaultValue="Ryan ryenold"
    onBlur={[MockFunction]}
    onKeyUp={[MockFunction]}
  />
</div>
`;

exports[`Component CustomInput Can render CustomInput even without placeholder 1`] = `
<div
  className="css-cssveg"
>
  <input
    className="css-1why0iz"
    defaultValue="Ryan ryenold"
    onBlur={[MockFunction]}
    onKeyUp={[MockFunction]}
    type="text"
  />
</div>
`;

exports[`Component CustomInput Can render CustomInput with type component textarea 1`] = `
<div
  className="css-cssveg"
>
  <textarea
    className="css-1f9izye"
    defaultValue="Ryan ryenold"
    onBlur={[MockFunction]}
    onKeyUp={[MockFunction]}
    placeholder="Search Furniture here"
    rows="4"
  />
</div>
`;
